
noinst_LIBRARIES = libi2.a

libi2_a_SOURCES = \
	ipipe_factories.H ipipe_factories.C \
	ipipe_connector.H ipipe_connector.C \
	ipipe_acceptor.H ipipe_acceptor.C \
	ipipe_forwarder.H ipipe_forwarder.C \
	ipipe_stats.H ipipe_stats.C \
	ipipe_rollover.H ipipe_rollover.C \
	ipipe_main.H ipipe_main.C

AM_CPPFLAGS = -I$(top_srcdir)/libpfkdll2 -I$(top_srcdir)/libpfkutil
