
noinst_LIBRARIES = libi2.a

libi2_a_SOURCES = \
	ipipe_factories.h ipipe_factories.cc \
	ipipe_connector.h ipipe_connector.cc \
	ipipe_acceptor.h ipipe_acceptor.cc \
	ipipe_forwarder.h ipipe_forwarder.cc \
	ipipe_stats.h ipipe_stats.cc \
	ipipe_rollover.h ipipe_rollover.cc \
	ipipe_main.h ipipe_main.cc

AM_CPPFLAGS = -I$(top_srcdir)/libpfkdll2 -I$(top_srcdir)/libpfkutil
