
noinst_LIBRARIES = libpfksh.a

noinst_HEADERS = \
	c_test.h config.h edit.h emacs_autogen.h expand.h \
	lex.h proto.h sh.h shf.h siglist_autogen.h table.h \
	tree.h tty.h

libpfksh_a_SOURCES = \
	alloc.c c_ksh.c c_sh.c c_test.c c_ulimit.c edit.c emacs.c \
	eval.c exec.c expr.c history.c io.c jobs.c lex.c main.c \
	misc.c path.c shf.c syn.c table.c trap.c tree.c tty.c var.c \
	version.c xtree.cc
